tdf#157517 vcl: PDF/UA export: add PDF/A extension schema to XMP

... if PDF/A is also enabled.  Thanks to Peter Wyatt for the example
document.

Change-Id: I2a5951e102ae28a4c998adafe8ab51caa2788e4b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158118
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>